Updated class-diagram to #3d3d3d;
For a better balance between legibility and brightness

--- a/stylesheets/dark/pkgmgrframe.css
+++ b/stylesheets/dark/pkgmgrframe.css
@@ -3,7 +3,7 @@
     test-target: rgb(166, 191, 137);
     css-target: rgb(197, 205, 206);
     window-background: #31363b;
-    class-diagram: #232629;
+    class-diagram: #3d3d3d;
     object-bench: class-diagram;
     codepad: class-diagram;
     codepad-input: darkgray;
